<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.luisdavila.practica7.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="20dp"
                android:gravity="right"
                android:layout_gravity="center"
                />
               <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/e1"
                    android:layout_weight="1"

                    />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info1"
                android:textSize="12dp"
                android:layout_gravity="center"
                />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cantidad"
                android:layout_gravity="center"
                android:textSize="20dp"
                />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/e2"
                    android:inputType="number"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    />
        </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info2"
                android:textSize="12dp"
                android:layout_gravity="center"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valor"
                android:layout_gravity="center"
                android:textSize="20dp"
                />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:inputType="number"
                    android:id="@+id/e3"
                    android:gravity="center"
                    android:layout_weight="1"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info3"
                android:textSize="12dp"
                android:layout_gravity="center"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Limpiar texto"
                android:layout_gravity="center"
                android:onClick="limpiar"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Agregar peluchito"
                android:layout_gravity="center"
                android:onClick="guardar"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Actualizar"
                    android:layout_weight="1"
                    android:onClick="modificar"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Buscar"
                    android:onClick="consultar"
                    />
            </LinearLayout>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:orientation="horizontal"
                   android:layout_height="wrap_content">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="eliminar"
                    android:layout_gravity="center"
                    android:onClick="eliminar"
                    />
                   <Button
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="Realizar venta"
                       android:onClick="venta"
                       android:layout_weight="1"
                       android:layout_gravity="center"
                       />

               </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mostrar Inventario"
                android:layout_gravity="center"
                android:onClick="mostrar"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mostrar Ganancias"
                android:layout_gravity="center"
                android:onClick="Ganancias"
                />


        </LinearLayout>
    </ScrollView>


</LinearLayout>
